--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "ts-node --compiler-options {\\\"module\\\":\\\"commonjs\\\"} prisma/seeder.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.637.0",
@@ -14,8 +15,10 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-form": "^0.1.0",
+    "@radix-ui/react-visually-hidden": "^1.1.0",
     "clsx": "^2.1.1",
     "next": "14.2.7",
+    "prisma": "^5.19.0",
     "react": "^18",
     "react-dom": "^18",
     "sqlite3": "^5.1.7",
@@ -28,7 +31,6 @@
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
-    "prisma": "^5.19.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
