feat(animation): Added Animation of Contact List via framer-motion
- Installed dependency: framer-motion

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-form": "^0.1.0",
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.31",
     "next": "14.2.7",
     "prisma": "^5.19.0",
     "react": "^18",
